Added a new testcase for test

--- a/TestOutput/index.html
+++ b/TestOutput/index.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Extent Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Dec 15, 2020 17:55:48</span></a>
+<a href="#"><span class="badge badge-primary">Dec 16, 2020 17:36:15</span></a>
 </li>
 </ul>
 </div>
@@ -109,7 +109,7 @@
           <div class="test-detail">
             <p class="name">initiated login</p>
             <p class="text-sm">
-              <span>17:55:49 PM</span> / <span>00:00:27:570</span>
+              <span>17:36:16 PM</span> / <span>00:00:23:782</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -118,9 +118,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">initiated login</h5>
-<span class='badge badge-success'>12.15.2020 17:55:49</span>
-<span class='badge badge-danger'>12.15.2020 17:56:17</span>
-<span class='badge badge-default'>00:00:27:570</span>
+<span class='badge badge-success'>12.16.2020 17:36:16</span>
+<span class='badge badge-danger'>12.16.2020 17:36:39</span>
+<span class='badge badge-default'>00:00:23:782</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 </div>
 <div class="m-t-10 m-l-5">login functionality has been initiate</div>
@@ -131,49 +131,49 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>5:56:09 PM</td>
+        <td>5:36:31 PM</td>
         <td>
           cleared the previous data present in email field
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>5:56:09 PM</td>
+        <td>5:36:31 PM</td>
         <td>
           user name has been entered as -> admin@yourstore.com
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>5:56:09 PM</td>
+        <td>5:36:31 PM</td>
         <td>
           cleared the previous data present in password field
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>5:56:09 PM</td>
+        <td>5:36:31 PM</td>
         <td>
           password has been entered as -> admin
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>5:56:17 PM</td>
+        <td>5:36:39 PM</td>
         <td>
           clicked on login button
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>5:56:17 PM</td>
+        <td>5:36:39 PM</td>
         <td>
-          After clicking on login button - HomePage title Dashboard / nopCommerce administration has been varified 
+          After clicking on login button - HomePage title => Dashboard / nopCommerce administration has been varified 
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>5:56:17 PM</td>
+        <td>5:36:39 PM</td>
         <td>
           <span class='badge white-text green'>Login is successful </span>
         </td>
@@ -188,9 +188,9 @@
           tag="Functional"
           device="chrome">
           <div class="test-detail">
-            <p class="name">homePageTest</p>
+            <p class="name">addNewCustomer</p>
             <p class="text-sm">
-              <span>17:56:17 PM</span> / <span>00:00:00:019</span>
+              <span>17:36:39 PM</span> / <span>00:00:18:187</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -198,16 +198,16 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">homePageTest</h5>
-<span class='badge badge-success'>12.15.2020 17:56:17</span>
-<span class='badge badge-danger'>12.15.2020 17:56:17</span>
-<span class='badge badge-default'>00:00:00:019</span>
+<h5 class="test-status text-pass">addNewCustomer</h5>
+<span class='badge badge-success'>12.16.2020 17:36:39</span>
+<span class='badge badge-danger'>12.16.2020 17:36:58</span>
+<span class='badge badge-default'>00:00:18:187</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 </div>
 <div class="m-t-15"><span class="badge badge-pill badge-default">Rajasekhar</span>
 <span class="badge badge-pill badge-default">Functional</span>
 <span class="badge badge-pill badge-default">chrome</span></div>
-<div class="m-t-10 m-l-5"> homePageTest : Testcase has been initiated successfully</div>
+<div class="m-t-10 m-l-5"> addNewCustomer : Testcase has been initiated successfully</div>
 </div>
 </div><div class="detail-body mt-4">
 <table class="table table-sm">
@@ -215,16 +215,128 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>5:56:17 PM</td>
+        <td>5:36:40 PM</td>
         <td>
-          Home page title has been validated successfully
+          Clicked on customers menu
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>5:36:41 PM</td>
+        <td>
+          Clicked on customers sub menu item
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>5:36:43 PM</td>
+        <td>
+          Clicked on add new button
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>5:36:43 PM</td>
+        <td>
+          Email has been entered as rajasekhar.rct@gmail.com
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>5:36:43 PM</td>
+        <td>
+          Password has been entered as Welcome123
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>5:36:43 PM</td>
+        <td>
+           first name has been entered as Maddigalla
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>5:36:43 PM</td>
+        <td>
+          Last name has been entered as Rajasekhar
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>5:36:43 PM</td>
+        <td>
+          Gender has been selected as Male
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>5:36:43 PM</td>
+        <td>
+          DateOfBirth has been selected as 07/29/1990
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>5:36:43 PM</td>
+        <td>
+          Company name has been entered as ISSI
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>5:36:43 PM</td>
+        <td>
+          is tax empty check box clicked
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>5:36:46 PM</td>
+        <td>
+          News Letter has been selected as Your Store Name
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>5:36:48 PM</td>
+        <td>
+          customer role has been selected as Administrators
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>5:36:48 PM</td>
+        <td>
+          Activation status of 'Active' check box is true
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>5:36:48 PM</td>
+        <td>
+          comments has been added as => This is demo on adding a new customer
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>5:36:52 PM</td>
+        <td>
+          Clicked on save button
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>5:56:17 PM</td>
+        <td>5:36:52 PM</td>
         <td>
-          <span class='badge white-text green'>homePageTest : Test is successful</span>
+          <span class='badge white-text green'>addNewCustomer : Test is successful</span>
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>5:36:58 PM</td>
+        <td>
+          clicked on logOut link
         </td>
       </tr>
   </tbody>
@@ -273,9 +385,9 @@
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>17:56:17 PM</td>
+<td>17:36:39 PM</td>
 <td>
-<a href="#" class="linked" test-id='2' id='2'>homePageTest</a>
+<a href="#" class="linked" test-id='2' id='2'>addNewCustomer</a>
 </td>
 </tr>
 </tbody>
@@ -322,9 +434,9 @@
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>17:56:17 PM</td>
+<td>17:36:39 PM</td>
 <td>
-<a href="#" class="linked" test-id='2' id='2'>homePageTest</a>
+<a href="#" class="linked" test-id='2' id='2'>addNewCustomer</a>
 </td>
 </tr>
 </tbody>
@@ -344,13 +456,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Dec 15, 2020 17:55:48</h3>
+<h3>Dec 16, 2020 17:36:15</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Dec 15, 2020 17:56:19</h3>
+<h3>Dec 16, 2020 17:36:58</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -401,10 +513,10 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='22%'><b>2</b> events passed</small></div>
+<div><small data-tooltip='8%'><b>2</b> events passed</small></div>
 <div>
 <small data-tooltip='0%'><b>0</b> events failed,
-<b data-tooltip='%'>7</b> others
+<b data-tooltip='%'>23</b> others
 </small>
 </div>
 </div>
@@ -420,7 +532,7 @@
 </div></div>
 <script>
 var timeline = {
-"initiated login":27.57,"homePageTest":0.019
+"initiated login":23.782,"addNewCustomer":18.187
 };
 </script>
 <div class="row">
@@ -517,7 +629,7 @@ passEvents: 2,
 failEvents: 0,
 warningEvents: 0,
 skipEvents: 0,
-infoEvents: 7
+infoEvents: 23
 };
 </script>        </div>
       </div>
